# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  logic.py  source.py
brain_games/games/: calc.py  even.py  gcd.py  logic.py  prime.py  progression.py  source.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
